Fixes CAE-45 - fixing centering of nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,10 @@ nav {
     transform: translateY(-6px) rotate(-45deg);
 }
 
+.mobile-menu {
+    align-items: center;
+}
+
 .mobile-nav-link {
     border-radius: 0.375rem;
     padding: 0.5rem 0.75rem;
